# oxigen

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MIGRATE.md  README.md  rustfmt.toml
fd-oxigen/: Cargo.toml
fd-oxigen/src/: main.rs
knapsack-oxigen/: Cargo.toml
knapsack-oxigen/src/: main.rs
nqueens-oxigen/: Cargo.toml
nqueens-oxigen/src/: main.rs
onemax-oxigen/: Cargo.toml
onemax-oxigen/src/: main.rs
oxigen/: Cargo.toml
oxigen/src/: age.rs  benchmarks.rs  crossover.rs  genotype.rs  lib.rs  mutation_rate.rs  niches_beta_rate.rs  population_refitness.rs  prelude.rs  selection.rs  selection_rate.rs  slope_params.rs  stats.rs  stop_criteria.rs  survival_pressure.rs  tests.rs
oxigen/src/stats/: stats_aux.rs  stats_fields.rs  stats_impl.rs  stats_schema.rs
oxigen/src/tests/: stats.rs
