[package]
name = "fd-oxigen"
description = "Fast Downward planner parameters optimization using oxigen."
version = "2.0.0"
authors = ["Martin1887 <marcos.martin.pozo.delgado@gmail.com>"]
repository = "https://github.com/Martin1887/oxigen"
readme = "../README.md"
keywords = ["oxigen", "genetic", "algorithm", "fd", "planning"]
license = "GPL-3.0-or-later"
categories = ["algorithms", "science"]
edition = "2018"

[dependencies]
clap = "2.33"
rand = "0.7"
rayon = "1"
oxigen = { path = "../oxigen", features=["global_cache"] }