[package]
name = "oxigen"
version = "1.5.0"
authors = ["Martin1887 <marcos.martin.pozo.delgado@gmail.com>"]
description = "Fast, parallel, extensible and adaptable genetic algorithm library."
repository = "https://github.com/Martin1887/oxigen"
readme = "../README.md"
keywords = ["oxigen", "genetic", "algorithm", "heuristic", "search"]
license = "MPL-2.0"
categories = ["algorithms", "science"]

[dependencies]
historian = "3.0"
rand = "0.5"
rayon = "1.0"
