[package]
name = "oxigen"
version = "2.2.1"
authors = ["Martin1887 <marcos.martin.pozo.delgado@gmail.com>"]
description = "Fast, parallel, extensible and adaptable genetic algorithm library."
repository = "https://github.com/Martin1887/oxigen"
readme = "../README.md"
keywords = ["oxigen", "genetic", "algorithm", "heuristic", "search"]
license = "MPL-2.0"
categories = ["algorithms", "science"]

[dependencies]
historian = "4"
rand = {"version" = "0.7", "features" = ["small_rng"]}
rayon = "1"

[features]
default_features = []
global_cache = []